# RL-ITG

./: .gitignore  LICENCE  README.md
fetch_moveit_assistant/: CMakeLists.txt  package.xml
pirl/: .gitignore  CMakeLists.txt  package.xml
pirl/include/pirl/: collision_checker.h  kinematic_solver.h
pirl/launch/: pirl.yaml  train.launch
pirl/launch/cfg/target_path/: hello.yaml  rot_yz.yaml  s.yaml  square.yaml
pirl/script/: eval_bc.py  eval_bc_MPC.py  eval_ddpg.py  eval_interpol_and_sac.py  eval_sac.py  eval_waypoints.py  module_col_sample_test.py  module_start_goal_sample_test.py  module_topic_speed_test.py  module_valid_sample_test.py  reward_function_test.py  train_main.py
pirl/script/algos/ddpg/: core.py  ddpg.py  utils.py
pirl/script/algos/ppo/: ppo.py
pirl/script/algos/sac/: core.py  sac.py  utils.py
pirl/script/envs/: PirlEnv.py  PirlEnv_backup.py  PirlTrajEnv.py  PirlTrajEnv_MPC.py  Pirl_interpolator.py  utils.py  vae_model.py
pirl/script/imitation_learning/: core.py  data_loader.py  train.py
pirl/script/serialize_model/: serialize_model.py  serialize_model_core.py  serialize_model_rl.py
pirl/script/utils/: interpolation_utils.py  loss_function.py
pirl/src/: collision_checker.cpp  kinematic_solver.cpp  pirl_services_main.cpp
pirl_gazebo/: CMakeLists.txt  context_vector_generation_process.txt  package.xml
pirl_msgs/: CMakeLists.txt  package.xml
pirl_vae/: .gitignore  Readme.md  (+5 more)
torm/: CMakeLists.txt  package.xml
torm/include/interpolation/: eval_problem_generator.h  interpolator6D.h  interpolator6D_makima.h  pirl_problem_generator.h  quat.h
torm/include/torm/: pirl_interpolator.h  pirl_neural_agent.h  pirl_problem.h  torm_debug.h  torm_ik_solver.h  torm_interpolator.h  torm_optimizer.h  torm_parameters.h  torm_problem.h  torm_trajectory.h  torm_utils.h  traj_evaluator.h
torm/launch/: fetch.launch
torm/launch/config/initial_traj/: hello-pirl_bc_test-0-0.csv  hello-pirl_bc_test-1-0.csv  hello-pirl_bc_test-10-0.csv  hello-pirl_bc_test-11-0.csv  hello-pirl_bc_test-12-0.csv  hello-pirl_bc_test-13-0.csv  hello-pirl_bc_test-14-0.csv  hello-pirl_bc_test-15-0.csv  hello-pirl_bc_test-16-0.csv  hello-pirl_bc_test-17-0.csv  hello-pirl_bc_test-18-0.csv  hello-pirl_bc_test-19-0.csv  hello-pirl_bc_test-2-0.csv  hello-pirl_bc_test-20-0.csv  hello-pirl_bc_test-21-0.csv  hello-pirl_bc_test-22-0.csv  hello-pirl_bc_test-23-0.csv  hello-pirl_bc_test-24-0.csv  hello-pirl_bc_test-25-0.csv  hello-pirl_bc_test-26-0.csv  hello-pirl_bc_test-27-0.csv  hello-pirl_bc_test-28-0.csv  hello-pirl_bc_test-29-0.csv  hello-pirl_bc_test-3-0.csv  hello-pirl_bc_test-30-0.csv  hello-pirl_bc_test-31-0.csv  hello-pirl_bc_test-32-0.csv  hello-pirl_bc_test-33-0.csv  hello-pirl_bc_test-34-0.csv  hello-pirl_bc_test-35-0.csv  hello-pirl_bc_test-36-0.csv  hello-pirl_bc_test-37-0.csv  hello-pirl_bc_test-38-0.csv  hello-pirl_bc_test-39-0.csv  hello-pirl_bc_test-4-0.csv  hello-pirl_bc_test-40-0.csv  hello-pirl_bc_test-41-0.csv  hello-pirl_bc_test-42-0.csv  hello-pirl_bc_test-43-0.csv  hello-pirl_bc_test-44-0.csv  (+5273 more)
torm/launch/config/path/: hello  kaist  random_0  random_1  random_10  random_11  random_12  random_13  random_14  random_15  random_16  random_17  random_18  random_19  random_2  random_20  random_21  random_22  random_23  random_24  random_25  random_26  random_27  random_28  random_29  random_3  random_30  random_31  random_32  random_33  random_34  random_35  random_36  random_37  random_38  random_39  random_4  random_40  random_41  random_42  (+2071 more)
torm/launch/config/problem/: free.yaml  kaist.yaml  random_obs.yaml  s.yaml  selfcol.yaml  square.yaml
torm/launch/config/robot/: fetch.yaml
torm/launch/config/scene/: s.txt  scene_0.txt  scene_1.txt  scene_10.txt  scene_11.txt  scene_12.txt  scene_13.txt  scene_14.txt  scene_15.txt  scene_16.txt  scene_17.txt  scene_18.txt  scene_19.txt  scene_2.txt  scene_20.txt  scene_21.txt  scene_22.txt  scene_23.txt  scene_24.txt  scene_25.txt  scene_26.txt  scene_27.txt  scene_28.txt  scene_29.txt  scene_3.txt  scene_30.txt  scene_31.txt  scene_32.txt  scene_33.txt  scene_34.txt  scene_35.txt  scene_36.txt  scene_37.txt  scene_38.txt  scene_39.txt  scene_4.txt  scene_40.txt  scene_41.txt  scene_42.txt  scene_43.txt  (+165 more)
torm/launch/config/start_conf/: hello_config.csv  kaist_config.csv  random_0_config.csv  random_10_config.csv  random_11_config.csv  random_12_config.csv  random_13_config.csv  random_14_config.csv  random_15_config.csv  random_16_config.csv  random_17_config.csv  random_18_config.csv  random_19_config.csv  random_1_config.csv  random_20_config.csv  random_21_config.csv  random_22_config.csv  random_23_config.csv  random_24_config.csv  random_25_config.csv  random_26_config.csv  random_27_config.csv  random_28_config.csv  random_29_config.csv  random_2_config.csv  random_30_config.csv  random_31_config.csv  random_32_config.csv  random_33_config.csv  random_34_config.csv  random_35_config.csv  random_36_config.csv  random_37_config.csv  random_38_config.csv  random_39_config.csv  random_3_config.csv  random_40_config.csv  random_41_config.csv  random_42_config.csv  random_43_config.csv  (+2067 more)
torm/launch/config/waypoints/: kaist.txt  selfcol.txt  selfcol2.txt  selfcol2_v2.txt  sgvr.txt  test.txt  test2.txt  zig.txt
torm/script/: make_scene.py  plot.py
torm/sh/: run_eval.sh  run_intials.sh  run_start_conf.sh
torm/src/: pirl_datacheck.cpp  pirl_datagen.cpp  pirl_interpolator.cpp  pirl_manual_test.cpp  pirl_nn_interpolate_test.cpp  pirl_obs_datagen.cpp  pirl_obs_problem_check.cpp  pirl_problem.cpp  pirl_problem_check.cpp  pirl_problem_generation.cpp  torm_debug.cpp  torm_evaluation.cpp  torm_evaluation_init.cpp  torm_evaluation_init_rnd.cpp  torm_generate_start_conf.cpp  torm_ik_solver.cpp  torm_interpolator.cpp  torm_main.cpp  torm_main_test.cpp  torm_optimizer.cpp  torm_parameters.cpp  torm_problem.cpp  torm_trajectory.cpp  unit_test_collision_checking.cpp  unit_test_collision_contacts.cpp
torm/src/utils/: eval_problem_generator.cpp  interpolator6D.cpp  interpolator6D_makima.cpp  pirl_problem_generator.cpp  traj_evaluator.cpp
(+44 files in other folders)
